tests/fixtures/negative/libraries/ForbiddenPublicDataClass.kt
package test

internal data class UserConfig(val host: String, val port: Int, val timeout: Long)
